--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -46,7 +46,6 @@ body {
 
 .eachList {
     display: flex;
-    margin: 25px;
 }
 
 .activeList {
@@ -92,4 +91,8 @@ body {
 
 .completeTask {
     opacity: 0.5;
+}
+
+.trashCanList {
+    margin: 0 15px;
 }
